# Saturn

./: .gitignore  README.MD  README.md  custom.css  main.py  maine.py  meson.build  pyproject.toml  requirements.txt  saturn.db
core/: request_handler.py
models/: body.py  collection.py  requests.py  response_data.py
res/: meson.build  methods.py  saturn.xml  xyz.frankity.saturn.appdata.xml  xyz.frankity.saturn.desktop  xyz.frankity.saturn.desktop.in  xyz.frankity.saturn.gschema.xml
src/: main.py  meson.build
src/core/: request_handler.py  saturn_environments_events.py
src/ui/: main_window.py
src/ui/dialogs/: add_collection_dialog.py  add_folder_dialog.py  add_request_dialog.py  message_dialog.py  yes_no_dialog.py
src/ui/widgets/: post_response_container.py  pre_request_container.py  project_list.py  query_input.py  query_item.py  query_panel.py  request_container.py  request_window.py  response_panel.py  source_view.py
src/ui/widgets/request_headers/: header_item.py  request_headers_container.py
src/utils/: config.py  database.py  io.py  misc.py
ui/: README.MD  main_window.py
ui/dialogs/: add_request_dialog.py  yes_no_dialog.py
ui/widgets/: custom.py  header_item.py  header_response.py  header_status.py  post_response_container.py  pre_request_container.py  query_input.py  query_item.py  query_panel.py  request_container.py  response_panel.py  source_view.py
ui/widgets/request_headers/: header_item.py  request_headers_container.py
ui/widgets/request_params/: param_item.py  request_params_container.py
utils/: database.py  misc.py
(+3 files in other folders)
